bin/tests/snapshots/array_sorting__3c77c41955e20985b0e3cbf9916ed013_lint_stderr.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  pkgs.vim
  pkgs.git
]
---
[array_sorting] Warning: Array elements are not in alphabetical order
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   pkgs.git
   │   ────┬───  
   │       ╰───── pkgs.git is out of alphabetical order
───╯
