bin/tests/snapshots/array_sorting__3e4b2255a95c1b840232d918d1256cad_fix.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  # about nvme
  "nvme"
  # about ahci
  "ahci"
]
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,6 @@
 [
+  # about ahci
+  "ahci"
   # about nvme
   "nvme"
-  # about ahci
-  "ahci"
 ]
