bin/tests/snapshots/array_sorting__3e4b2255a95c1b840232d918d1256cad_lint_errfmt.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  # about nvme
  "nvme"
  # about ahci
  "ahci"
]
---
<temp_file_path>>5:3:W:34:[array_sorting] `"ahci"` is out of alphabetical order
