bin/tests/snapshots/array_sorting__3e4b2255a95c1b840232d918d1256cad_lint_json.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  # about nvme
  "nvme"
  # about ahci
  "ahci"
]
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "array_sorting",
      "note": "Array elements are not in alphabetical order",
      "code": 34,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 5,
              "column": 3
            },
            "to": {
              "line": 5,
              "column": 9
            }
          },
          "message": "`\"ahci\"` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 6,
                "column": 2
              }
            },
            "fix": "[\n  # about ahci\n  \"ahci\"\n  # about nvme\n  \"nvme\"\n]"
          }
        }
      ]
    }
  ]
}
