bin/tests/snapshots/array_sorting__3e4b2255a95c1b840232d918d1256cad_lint_stderr.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  # about nvme
  "nvme"
  # about ahci
  "ahci"
]
---
[array_sorting] Warning: Array elements are not in alphabetical order
   ╭─[ <temp_file_path>:5:3 ]
   │
 5 │   "ahci"
   │   ───┬──  
   │      ╰──── "ahci" is out of alphabetical order
───╯
