bin/tests/snapshots/array_sorting__6fbf51dd5b9967c5533cdedd43958c5f_lint_json.snap
---
source: bin/tests/array_sorting.rs
---
builtins.replaceStrings
  [
    "zebra"
    "apple"
  ]
  [
    "stripes"
    "core"
  ]
---
