bin/tests/snapshots/array_sorting__c19ab3f64e0bf2dc440596f154bc7e46_lint_json.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  (pkgs.writeShellApplication {
    name = "zebra";
  })
  pkgs.apple
]
---
