bin/tests/snapshots/array_sorting__c919de15908a9a7b80afcf2f53004c43_lint_errfmt.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  "nvme"
  "ahci"
]
---
<temp_file_path>>3:3:W:34:[array_sorting] `"ahci"` is out of alphabetical order
