bin/tests/snapshots/array_sorting__c919de15908a9a7b80afcf2f53004c43_lint_json.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  "nvme"
  "ahci"
]
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "array_sorting",
      "note": "Array elements are not in alphabetical order",
      "code": 34,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 3,
              "column": 3
            },
            "to": {
              "line": 3,
              "column": 9
            }
          },
          "message": "`\"ahci\"` is out of alphabetical order",
          "suggestion": null
        }
      ]
    }
  ]
}
