bin/tests/snapshots/array_sorting__c919de15908a9a7b80afcf2f53004c43_lint_stderr.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  "nvme"
  "ahci"
]
---
[array_sorting] Warning: Array elements are not in alphabetical order
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │   "ahci"
   │   ───┬──  
   │      ╰──── "ahci" is out of alphabetical order
───╯
