bin/tests/snapshots/array_sorting__dd0b440dba52a4875f52bb09de61f4e3_fix.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  "apple"
  "Zebra"
]
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,4 +1,4 @@
 [
+  "Zebra"
   "apple"
-  "Zebra"
 ]
