bin/tests/snapshots/array_sorting__dd0b440dba52a4875f52bb09de61f4e3_lint_errfmt.snap
---
source: bin/tests/array_sorting.rs
assertion_line: 7
---
[
  "apple"
  "Zebra"
]
---
<temp_file_path>>3:3:W:34:[array_sorting] `"Zebra"` is out of alphabetical order
